<resources>
    <string name="app_name">ContractoLabor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_contract">Contracts</string>
    <string name="menu_labors">Labors</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contract_name">Contract Name</string>
    <string name="workers">Workers</string>
    <string name="details">Details</string>
    <string name="reports">Reports</string>
    <string name="expense">Expenses</string>
    <string name="add_project">Add New Project</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_section">Password Section</string>
    <string name="forgot_password_message"> <b>Alert!</b> \nIn case of forgetting your password \n you needs to contact with the <b>LeadN Solutions</b>(App developers). \n phone: <b>+92-302-5580842 </b></string>
    <string name="enter_more_info">Contractor Basic Information</string>
    <string name="choose_image">Choose Image</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="registration">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="attendance">Attendance</string>
    <string name="worker_name">Name</string>
    <string name="wage">Daily wage</string>
    <string name="days_of_work">WorkDays</string>
    <string name="is_free">is Free</string>
    <string name="menu_workers">Workers</string>
    <string name="worker_type">Type</string>
    <string name="add_worker">Add worker</string>
    <string name="add_worker_info">Worker basic information</string>
    <string name="add_contract_info">Contract basic information</string>
    <string name="phone">Phone</string>
    <string name="work_at">Work at</string>
    <string name="absent">Absent</string>
    <string name="image">Image</string>
    <string name="present">Present</string>
    <string name="total">Total wage:</string>
    <string name="status">Status</string>
    <string name="assign_worker">Assign Workers to Contract</string>
    <string name="add_contract">Add Contract</string>
    <string name="add_owner_info">Owner information</string>
    <string name="add_owner">Add Owner</string>
    <string name="sq_feet">Sq. feet Price</string>
    <string name="choose_starting_date">choose starting date</string>
    <string name="worker_profile">Worker Profile</string>
    <string name="basic_info">Basic Info</string>
    <string name="payment_history">Payment History</string>
    <string name="working_history">Working History</string>
    <string name="no_attendance_is_marked">No Attendance is Marked</string>
    <string name="no_history_is_found">No History is found</string>
    <string name="date">Date</string>
    <string name="assign_to_contract">Assign to Contract</string>
    <string name="count">count</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="expense_name">Expense Name</string>
    <string name="expended_amount">Expended Amount</string>
    <string name="no_expenses_is_found">No Data is Found!</string>
    <string name="no_data_is_found">No Data is Found!</string>
    <string name="starting_date">Starting date</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="total_area">Total Area</string>
    <string name="choose_ending_date">Choose Ending Date</string>
    <string name="add_profile">Profile</string>
    <string name="estimated_ends_date">Estimated end Date</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_phone">Owner Phone</string>
    <string name="owner_address">Owner Address</string>
    <string name="working_days">Working Days</string>
    <string name="total_wage">Total</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="work_performance_picture">Work Performance Pictures</string>
    <string name="no_workers_assigned_yet">No Workers assigned yet</string>
    <string name="zero">0</string>
    <string name="contracts">Contracts</string>
    <string name="total_budget">Total Budget</string>
    <string name="log_out">Log Out</string>
    <string name="shifting_of_worker">Shifting of Worker</string>
    <string name="shift_worker">Shift Worker</string>
    <string name="previous_contract">previous contract</string>
    <string name="camera">Camera</string>
</resources>