<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leadn.contractolabor.ui.workers.WorkersFragment">

    <Button
        android:id="@+id/btn_add_new_worker"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/style_bottom_navigation"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add_worker"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_new_worker">


        <TextView
            android:id="@+id/img_worker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/image"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txt_worker_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/worker_name"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_worker_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/worker_type"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_worker_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/phone"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_worker_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/work_at"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_worker_daily_wage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wage"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_worker_days_of_work"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/days_of_work"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_workers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:listitem="@layout/single_workers_list_items" />

    <TextView
        android:id="@+id/txt_no_data_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_is_found"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>