<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/style_btn"
        android:drawableStart="@drawable/ic_baseline_close"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_assign_workers"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/style_btn"
        android:padding="7dp"
        android:text="@string/assign_worker"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/txt_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_close" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_assign_workers">


        <TextView
            android:id="@+id/img_worker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/image"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/txt_worker_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/worker_name"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_worker_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/worker_type"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_worker_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/work_at"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_worker_daily_wage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wage"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_worker_days_of_work"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/days_of_work"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_contract_workers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>