<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/txt_contract_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/contract_name"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_present"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/present"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_absent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/absent"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>