<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leadn.contractolabor.ui.contracts.expenses.ExpensesFragment">

    <Button
        android:id="@+id/btn_add_new_expenses"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/style_bottom_navigation"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add_expenses"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_contract_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/contract_name"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_new_expenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_add_new_expenses"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_new_expenses">


        <TextView
            android:id="@+id/txt_expense_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/expense_name"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_expended_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:gravity="center|center_vertical"
            android:text="@string/expended_amount"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_expense_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/date"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_payment_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/status"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_expenses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:listitem="@layout/single_expenses_list_items" />

    <TextView
        android:id="@+id/txt_no_data_found"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/no_data_is_found"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>