<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_new_expenses">


        <TextView
            android:id="@+id/txt_expense_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/expense_name"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_expended_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:gravity="center|center_vertical"
            android:text="@string/expended_amount"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_expense_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/date"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_payment_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/status"
            android:textColor="@color/colorSmokyBlack"
            android:textSize="13sp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>